{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "d6f08f4b-23a2-4c21-9f9c-de93e34362df",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "bc74e5dd-6a81-4054-8e83-8e7cdbe1315c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "a67d122a-3732-4d2a-8034-dd740191e4b4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b4f4490-21a1-425c-ba0a-b1a187bcb989",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "75f6228d-8775-4165-b170-01259580388a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d305cf6c-2449-42de-9c54-52a79420deb6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b68869ac-6b47-4a43-b697-7db1b3e3a626",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "825260d2-17ea-4e09-a310-775f0c15f2eb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5bf53b84-d3b2-457b-bd95-3624f3fd0467",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}